--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -5,10 +5,16 @@
 	min-height: 50vw;
 
 	&__list {
+		margin-top: 44px;
 		display: none;
 		grid-template-columns: 1fr 1fr 1fr;
 		gap: 24px;
-		margin-top: 44px;
+		
+
+		@media (max-width: 768px) {
+			grid-template-columns: 1fr 1fr;
+
+		}
 
 		&--is-active {
 			display: grid;
@@ -28,6 +34,12 @@
 		display: flex;
 		justify-content: center;
 
+		@media (max-width: 768px) {
+			white-space: nowrap;
+			overflow: scroll;
+			padding-left: 20px;
+		}
+
 		&__button {
 			color: variaveis.$corTextoSecundario;
 			font-size: 20px;
@@ -43,6 +55,10 @@
 			&--is-active {
 				border-color: variaveis.$corTextoSecundario;
 				}
+
+			@media (max-width: 768px) {
+				font-size: 16px;
+			}
 			}
 		}
 }
